// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Nav 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav w-md"
  >
    <ul
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-selected"
          data-menu-id="rc-menu-uuid-1"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                data-depth="1"
                data-id="1"
                title="Nav 1"
              >
                <i
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                >
                  <img
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Icon mr-2"
                    src="https://suda.cdn.bcebos.com/images%2F2021-01%2Fdiamond.svg"
                  />
                </i>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                  title="Nav 1"
                >
                  Nav 1
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          data-menu-id="rc-menu-uuid-2"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                data-depth="1"
                data-id="1"
                title="Nav 2"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                  title="Nav 2"
                >
                  Nav 2
                </span>
              </a>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon-out __PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon-out--top-left"
                style="width: 21.970562748477143px; height: 21.970562748477143px;"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon __PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon--top-left __PRISMUI_COMPONENT_CLASS_PREFIX__Badge--danger"
                  style="height: 12px; line-height: 12px; font-size: 12px;"
                >
                  HOT
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          data-menu-id="rc-menu-uuid-3"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                data-depth="1"
                data-id="2"
                title="Nav 3"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                  title="Nav 3"
                >
                  Nav 3
                </span>
              </a>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon-out __PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon-out--top-left"
                style="width: 21.970562748477143px; height: 21.970562748477143px;"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon __PRISMUI_COMPONENT_CLASS_PREFIX__Badge-ribbon--top-left __PRISMUI_COMPONENT_CLASS_PREFIX__Badge--success"
                  style="height: 12px; line-height: 12px; font-size: 12px;"
                >
                  SUC
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 3;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          data-menu-id="rc-menu-uuid-4"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Badge"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                data-depth="1"
                data-id="3"
                title="外部地址"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                  title="外部地址"
                >
                  外部地址
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 3;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with Dialog 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              点击弹框
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with defer 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-2-popup"
                  role="menu"
                >
                  <li
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                      </div>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          class="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-6-popup"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-6-popup"
                  role="menu"
                >
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                    style="order: 0;"
                  >
                    <li
                      aria-disabled="false"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-7"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="3.1"
                          title="Nav 3-1"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                            title="Nav 3-1"
                          >
                            Nav 3-1
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-8"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="3.2"
                          title="Nav 3-2"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                            title="Nav 3-2"
                          >
                            Nav 3-2
                          </span>
                        </a>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with icons 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-2-popup"
                  role="menu"
                >
                  <li
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <i
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                          >
                            <icon-mock
                              class="mr-2 icon-star"
                              icon="star"
                            />
                            <icon-mock
                              class="mr-2 icon-search"
                              icon="search"
                            />
                          </i>
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                          <i
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon-after"
                          >
                            <img
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Icon ml-2"
                              src="https://suda.cdn.bcebos.com/images%2F2021-01%2Fdiamond.svg"
                            />
                          </i>
                        </a>
                      </div>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          class="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with itemActions 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav w-md"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-disabled __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-disabled"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <i
                        class="cloud fa fa-cloud"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-disabled"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-2-popup"
                  aria-disabled="true"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-2-popup"
                  role="menu"
                >
                  <li
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-disabled"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-3-popup"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          class="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="true"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-disabled"
                      data-menu-id="rc-menu-uuid-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-disabled"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-6-popup"
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay in"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay in"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with itemActions 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav w-md"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <i
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <i
                        class="cloud fa fa-cloud"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown is-opened"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-2-popup"
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
                <ul
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
                  data-menu-list="true"
                  id="rc-menu-uuid-2-popup"
                  role="menu"
                >
                  <li
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu"
                    role="none"
                  >
                    <div
                      aria-controls="rc-menu-uuid-3-popup"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                      data-menu-id="rc-menu-uuid-3"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.1"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-dragBar"
                            draggable="true"
                          >
                            <icon-mock />
                          </span>
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                            title="Nav 2-1"
                          >
                            Nav 2-1
                          </span>
                        </a>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                      >
                        <icon-mock
                          class="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </li>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                    style="order: 1;"
                  >
                    <li
                      aria-disabled="false"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                      data-menu-id="rc-menu-uuid-5"
                      role="menuitem"
                      style="padding-left: 32px;"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                      >
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                          data-depth="2"
                          data-id="2.2"
                          title="Nav 2-2"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-dragBar"
                            draggable="true"
                          >
                            <icon-mock />
                          </span>
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                            title="Nav 2-2"
                          >
                            Nav 2-2
                          </span>
                        </a>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                            >
                              <i
                                class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </ul>
              </li>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-6-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-6"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-dragBar"
                        draggable="true"
                      >
                        <icon-mock />
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-extra"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DropDown"
                      >
                        <button
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                        >
                          <i
                            class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  >
                    <icon-mock
                      class="icon icon-right-arrow-bold"
                      icon="right-arrow-bold"
                    />
                  </span>
                </div>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with multi-level 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav w-md"
  >
    <ul
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-selected"
          data-menu-id="rc-menu-uuid-1"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="1"
              title="Nav 1"
            >
              <i
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
              >
                <i
                  class="fa fa-user mr-2 fa fa-user"
                />
              </i>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                title="Nav 1"
              >
                Nav 1
              </span>
            </a>
          </div>
        </li>
      </ul>
      <li
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-open"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-2-popup"
          aria-expanded="true"
          aria-haspopup="true"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
          data-menu-id="rc-menu-uuid-2"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="2"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                title="Nav 2"
              >
                Nav 2
              </span>
            </a>
          </div>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
          >
            <icon-mock
              class="icon icon-right-arrow-bold"
              icon="right-arrow-bold"
            />
          </span>
        </div>
        <ul
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-sub __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline"
          data-menu-list="true"
          id="rc-menu-uuid-2-popup"
          role="menu"
        >
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu"
            role="none"
          >
            <div
              aria-controls="rc-menu-uuid-3-popup"
              aria-expanded="false"
              aria-haspopup="true"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
              data-menu-id="rc-menu-uuid-3"
              role="menuitem"
              style="padding-left: 32px;"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
              >
                <a
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                  data-depth="2"
                  data-id="2.1"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label-subTitle"
                    title="Nav 2-1"
                  >
                    Nav 2-1
                  </span>
                </a>
              </div>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
              >
                <icon-mock
                  class="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </div>
          </li>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
            style="order: 1;"
          >
            <li
              aria-disabled="false"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
              data-menu-id="rc-menu-uuid-5"
              role="menuitem"
              style="padding-left: 32px;"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
              >
                <a
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                  data-depth="2"
                  data-id="2.2"
                  title="Nav 2-2"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                    title="Nav 2-2"
                  >
                    Nav 2-2
                  </span>
                </a>
              </div>
            </li>
          </ul>
        </ul>
      </li>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          data-menu-id="rc-menu-uuid-6"
          role="menuitem"
          style="padding-left: 16px;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="3"
              title="Nav 3"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                title="Nav 3"
              >
                Nav 3
              </span>
            </a>
          </div>
        </li>
      </ul>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with overflow 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-horizontal"
          >
            <section
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              style="color: red;"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="opacity: 1;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  role="menuitem"
                  style="opacity: 1;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                      title="Nav 2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <li
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item-rest __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-horizontal"
                role="none"
                style="opacity: 1;"
              >
                <div
                  aria-controls="rc-menu-uuid-rc-menu-more-popup"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
                  data-menu-id="rc-menu-uuid-rc-menu-more"
                  role="menuitem"
                  tabindex="-1"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflowedIcon thisisoverflowClassName"
                  >
                    <i
                      class="fas fa-angle-double-down icon Nav-item-icon fas fa-angle-double-down"
                    />
                    点击展开
                  </span>
                  <i
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
                  />
                </div>
              </li>
            </section>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with source 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav"
          >
            <ul
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-inline __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-expand-before"
              data-menu-list="true"
              dir="ltr"
              role="menu"
              tabindex="0"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-1"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="1"
                      title="Nav 1"
                    >
                      <i
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
                      >
                        <i
                          class="fa fa-user mr-2 fa fa-user"
                        />
                      </i>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 1"
                      >
                        Nav 1
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-2"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="2"
                      title="Nav 2"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 2"
                      >
                        Nav 2
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 2;"
              >
                <li
                  aria-disabled="false"
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
                  data-menu-id="rc-menu-uuid-3"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
                  >
                    <a
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
                      data-depth="1"
                      data-id="3"
                      title="Nav 3"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                        title="Nav 3"
                      >
                        Nav 3
                      </span>
                    </a>
                  </div>
                </li>
              </ul>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            >
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 0;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 1;"
              />
              <ul
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
                style="order: 2;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Nav with stacked 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-horizontal"
  >
    <ul
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-root __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-ltr __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-light"
      data-menu-list="true"
      dir="ltr"
      role="menu"
      tabindex="0"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          data-menu-id="rc-menu-uuid-1"
          role="menuitem"
          style="opacity: 1; order: 0;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="1"
              title="Nav 1"
            >
              <i
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon"
              >
                <i
                  class="fa fa-user mr-2 fa fa-user"
                />
              </i>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                title="Nav 1"
              >
                Nav 1
              </span>
            </a>
          </div>
        </li>
      </ul>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          role="menuitem"
          style="opacity: 1; order: 1;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="2"
              title="Nav 2"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                title="Nav 2"
              >
                Nav 2
              </span>
            </a>
          </div>
        </li>
      </ul>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      >
        <li
          aria-disabled="false"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item"
          role="menuitem"
          style="opacity: 1; order: 2;"
          tabindex="-1"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-wrap"
          >
            <a
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-link"
              data-depth="1"
              data-id="3"
              title="Nav 3"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-label"
                title="Nav 3"
              >
                Nav 3
              </span>
            </a>
          </div>
        </li>
      </ul>
      <li
        aria-hidden="true"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflow-item-rest __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-horizontal"
        role="none"
        style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
      >
        <div
          aria-controls="rc-menu-uuid-rc-menu-more-popup"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-title"
          data-menu-id="rc-menu-uuid-rc-menu-more"
          role="menuitem"
          tabindex="-1"
        >
          <i
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-overflowedIcon fa fa-ellipsis-h"
          />
          <i
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 0;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 1;"
      />
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Nav-Menu-item-tooltip-wrap"
        style="order: 2;"
      />
    </div>
  </div>
</div>
`;
